Fixed too large content due to rotatet h1

--- a/src/app/pages/new-comer/entry/entry.component.scss
+++ b/src/app/pages/new-comer/entry/entry.component.scss
@@ -1,5 +1,5 @@
 #title {
-  padding-top: 25vh;
+  padding-top: 20vh;
   font-size: 9.0rem;
 
   @media (max-width: 960px) {
@@ -9,6 +9,8 @@
   h1 {
     font-weight: 600;
     font-size: 10.0rem;
+    width: fit-content;
+    margin: auto;
 
     @media (max-width: 960px) {
       font-size: 15vw;
@@ -38,7 +40,7 @@ section {
   background-color: white;
 
   @media (max-width: 960px) {
-    padding: 25px;
+    padding: 20px;
   }
 
   .mat-stroked-button {
