--- a/src/app/pages/offer/classes/classes.component.scss
+++ b/src/app/pages/offer/classes/classes.component.scss
@@ -1,13 +1,5 @@
-// header {
-//   height: 50%;
-//   background-image: url(src/assets/images/style-images/mitgliedschaften.jpg);
-//   background-attachment: fixed;
-//   background-size: cover;
-//   background-position-y: bottom;
-// }
-
 #title {
-  padding-top: 25vh;
+  padding-top: 20vh;
   font-size: 9.0rem;
 
   @media screen and (max-width: 960px) {
@@ -17,8 +9,10 @@
   h1 {
     font-weight: 600;
     font-size: 10.0rem;
+    width: fit-content;
+    margin: auto;
 
-    @media screen and (max-width: 960px) {
+    @media (max-width: 960px) {
       font-size: 15vw;
       text-shadow:
         2px 2px 5px white,
